// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPreview renders horizontally 1`] = `
<div
  className="video-preview horizontal"
>
  <div
    className="image-container"
  >
    <Image
      as="img"
      src="url"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span />
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        channel title
      </div>
      <div>
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`VideoPreview renders vertically 1`] = `
<div
  className="video-preview "
>
  <div
    className="image-container"
  >
    <Image
      as="img"
      src="url"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span />
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        channel title
      </div>
      <div>
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`VideoPreview renders with props video = {} 1`] = `
<div
  className="video-preview "
>
  <div
    className="image-container"
  >
    <Image
      as="img"
      src="url"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span />
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        channel title
      </div>
      <div>
        <span />
      </div>
    </div>
  </div>
</div>
`;
